--- a/amar_tablelist.html
+++ b/amar_tablelist.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -25,15 +25,16 @@ td, th {
   </tr>
   <tr>
     <td>1.</td>
-    <td>■ Books <br> 1. Malaysia <br> 2. Indonesia <br> 3. Singapore <br> ■ Maps</td>
+    <td><ul><li> Books</li></ul> <ol><li>Malaysia</li> <li>Indonesia</li>  <li>Singapore</li></ol> <ul><li>Maps</li></ul></td>
     <td>Label 2</td>
   </tr>
   <tr>
     <td>2.</td>
-    <td>iv. Hello <br> v. Hai <br> vi. Test</td>
+    <td><ol type="i"><li>Hello</li> <li>Hai</li> <li>Test</li></ol></td>
     <td>Label 10</td>
   </tr>
 </table>
 
 </body>
 </html>
+
